--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dev_dependencies:
   another_flushbar: ^1.12.30
   provider: ^6.1.2
   fluttertoast: ^8.2.6
+  flutter_multiselect:
   shared_preferences:
 
 flutter:
