--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,13 +39,15 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  file_picker: ^5.2.2
   flutter_lints: ^3.0.0
   flutter_rating_bar: ^4.0.0
   fl_chart: ^0.68.0
   http: ^1.2.2
   another_flushbar: ^1.12.30
   provider: ^6.1.2
-  fluttertoast: ^8.2.6
+  fluttertoast: ^8.2.8
+  validators: ^3.0.0
   flutter_multiselect:
   shared_preferences:
 
