--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   file_picker: ^5.2.2
+  intl: ^0.18.0
   flutter_lints: ^3.0.0
   flutter_rating_bar: ^4.0.0
   fl_chart: ^0.68.0
