--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dev_dependencies:
   validators: ^3.0.0
   flutter_multiselect:
   shared_preferences:
+  flutter_webview_plugin: ^0.4.0
+
 
 flutter:
 
