--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,10 @@ dev_dependencies:
   flutter_multiselect:
   shared_preferences:
   flutter_webview_plugin: ^0.4.0
+  path_provider: ^2.0.11
+  flutter_pdfview: ^1.3.0
+  url_launcher: ^6.3.1
+  image_picker: ^0.8.5+3
 
 
 flutter:
